app/assets/stylesheets/startups.css
/*
  Place all the styles related to the matching controller here.
  They will automatically be included in application.css.
*/

.field input[type=text], .field textarea, .field input[type=number]{
  width: 60vw;
}

.field{
  padding-left: 20vw;
  text-align: left;
}

h2#description{
  line-height: normal;
}

.field textarea{
    height: 10vh;
}

.showSection{
  padding-top: 15vh;
}
#heading{
  height: 10vh;
  /*background-color: white;*/
}
#content{
  height: 100vh;
  background-color: white;
  margin-left: -1vw;
  margin-right: -1vw;
}
#new{
  /*margin-bottom: 5vh;*/
  text-align: center;
  /*padding-left: 5vw;*/
}
h1{
  font-size: 10vh;
}
a{
  font-size: 2vh;
}
p{
  margin-top: 0.5vh;
  margin-bottom: 1vh;
  font-size: 3vh;
}
.app{
  margin-top: 5vh;
  width: 20vw;
  height: 20vw;
  padding-top: 2vh;
  background-color: lightgray;
  text-align: center;
  float: left;
  margin-left: 6vmin;
  /*border: 1px solid black;*/
  border-radius: 5px;
  box-shadow: 0px 6px 4px -4px;
}

.app img{
  height: 15vh;
  margin-bottom: 2vh;
}

body{
  font-family: 'Raleway', sans-serif;
  text-align: center;
  /*background-color: #2196F3;*/
  background-color: white;
}

#slogan{
  height: 95vh;
  margin-left: -1vw;
  margin-right: -1vw;
  font-family: 'Oswald';
  text-align: left;
  background-image: url(http://pre03.deviantart.net/1328/th/pre/i/2011/013/4/8/hive_tech_wallpaper_blue_by_aexease-d373zrd.jpg);
  background-size: cover;
  text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;
}

#slogan h1{
  /*color: #595959;*/
  color: white;
  text-align: left;
  font-style: italic;
  padding-top: 30vh;
  margin-left: 5vw;
  font-size: 9vw;
  font-family: 'Oswald';
  margin-top: 0;
}
h1#secondline{
  padding-top: 2vh;
}
#login{
  font-size: 2vh;
  text-align: right;
  padding-top: 5vh;
  /*clear: both;*/
  margin-right: 3vw;
}

#content h1{
  text-align: center;
  font-family: 'Oswald';
}

p#footer{
  clear: both;
  width: 100%;
  font-size: 2vh;
  padding-top: 2vh;
}

#startupShowImage{
  float: left;
  text-align: left;
  width: 20vw;
}
#startupShowImage img{
  margin-top: 10vh;
  padding-left: 20vw;
  padding-right: 5vw;
  border-right: 1px solid black;
  clear: both;
  width: 20vw;
}

#showArea{
  clear: both;
  /*margin-top: 10vh;*/
  text-align: left;
  width: 100%;
}

#showArea h1{
  padding-top: 15vh;
}

#showArea h1, #showArea h2, #showArea p, #showArea h3{
    font-family: 'Oswald';
    margin-left: 50vw;
}

#showArea h2{
  font-size: 2.5vw;
}

#showArea p{
  font-size: 2vw;
}

#reviewarea h1{
  padding-top: 5.5vh;
  color: white;
  height:8vh;
  background-color: darkgray;
}


#reviewarea{
  clear: both;
  padding-top: 10vh;
}
#addOn{
  font-size: 1.5vh;
}

